--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3'
+version: '3.8'
 services:
   codinvpy:
     container_name: codinvpy
-    image: codinvpy
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/codinv/codinvpy
+    network_mode: bridge
     volumes:
-      - ./:/opt/pywd
+      - ./:/app
+    environment:
+      - TZ=Europe/Moscow
+      - PY_SCRIPT=./startup_script.py
+    restart: unless-stopped
